# godot-test-cpp

./: .gitignore  .gitmodules  README.md  export_presets.cfg  project.godot
.github/workflows/: build.yml
Arts/: enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  enemySwimming_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk1.png.import  playerGrey_walk2.png.import
Audio/: House In a Forest Loop.ogg.import  gameover.wav.import
CoreGame/: CMakeLists.txt  build.sh
CoreGame/CoreGame/: CMakeLists.txt
CoreGame/CoreGame/include/: Controller.h  Enemy.h  HUD.h  Main.h  Main_bak.h  Mob.h  Player.h
CoreGame/CoreGame/src/: Controller.cpp  Enemy.cpp  GodotLibrary.cpp  HUD.cpp  Main.cpp  Main_bak.cpp  Mob.cpp  Player.cpp
Libraries/: CoreGame.gdnlib
Scenes/: Enemy.tscn  HUD.tscn  Main.tscn  Mob.tscn  Player.tscn  main.tscn
Scripts/: Controller.gdns  Enemy.gdns  HUD.gdns  Hello.gdns  Main.gdns  Player.gdns
